--- a/monash_ands/templates/monash_ands/form.html
+++ b/monash_ands/templates/monash_ands/form.html
@@ -26,7 +26,7 @@
 					'</strong><input type="hidden" name="ldap_party" value="' +
 					val +
 					'"/>' +		
-					' <a class="remove_party"><img src="/site_media/images/icon_deletelink.gif"></a>' +
+					' <a class="remove_party"><img src="{{STATIC_URL}}/images/icon_deletelink.gif"></a>' +
 					'</li>';
 
 				$(html).appendTo($('#ldap_party_list'));
@@ -103,14 +103,14 @@
       <h1>Please Wait...</h1>
     </div>
     <div align="center" class="jqmAlertContentLoading" id="jqmAlertContentLoading">
-      <img src="/site_media/images/ajax-loader-big.gif">
+      <img src="{{STATIC_URL}}/images/ajax-loader-big.gif">
       </div>
     </div>
   </div>
 <div id="ands_register_container">
 <strong>ANDS Research Data Australia Registration</strong>
 {% if is_owner %}
-<p><img src="/site_media/images/ands-logo-hi-res.jpg"></p>
+<p><img src="{{STATIC_URL}}/images/ands-logo-hi-res.jpg"></p>
 <p>
 	{% if disallowed_protocol %}
 		<p>Sorry, ANDS registration is only available to those logged in through Monash Authcate.</p>
@@ -175,7 +175,7 @@
 							<strong>{{party.party_fullname}}</strong> (internal id: <strong>{{party.party_id}}</strong>)						
 							<input name="ldap_existing_party" value="{{party.party_id}}" type="hidden">
 							<a class="remove_party">
-								<img src="/site_media/images/icon_deletelink.gif">
+								<img src="{{STATIC_URL}}/images/icon_deletelink.gif">
 							</a>
 						</li>
 					{% endfor %}
